--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,12 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.3",
-    "pytest-asyncio>=0.21.1",
+    "pytest-asyncio>=0.23.0",
 ]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
 
 [project.scripts]
 swamp = "swamp.__main__:main"
