--- a/custom_components/swamp_controller/manifest.json
+++ b/custom_components/swamp_controller/manifest.json
@@ -3,12 +3,12 @@
   "name": "Crestron SWAMP Controller",
   "codeowners": [],
   "config_flow": true,
-  "documentation": "https://github.com/yourusername/swamp-controller",
+  "dependencies": [],
+  "documentation": "https://github.com/jaroy/swamp-controller",
   "integration_type": "device",
   "iot_class": "local_push",
   "requirements": [
-    "pyyaml>=6.0.1",
-    "prompt-toolkit>=3.0.43"
+    "pyyaml>=6.0.1"
   ],
   "version": "1.0.0"
 }
