--- a/custom_components/swamp_controller/manifest.json
+++ b/custom_components/swamp_controller/manifest.json
@@ -7,8 +7,9 @@
   "documentation": "https://github.com/jaroy/swamp-controller",
   "integration_type": "device",
   "iot_class": "local_push",
+  "issue_tracker": "https://github.com/jaroy/swamp-controller/issues",
   "requirements": [
-    "pyyaml>=6.0.1"
+    "crestron-swamp-controller==1.0.0"
   ],
   "version": "1.0.0"
 }
