--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,33 @@ requires = ["setuptools>=68.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "swamp-controller"
-version = "0.1.0"
-description = "Interactive controller for Crestron SWAMP media amplifier"
+name = "crestron-swamp-controller"
+version = "1.0.0"
+description = "Interactive controller for Crestron SWAMP media amplifier systems"
+readme = "README.md"
 requires-python = ">=3.12"
+license = "MIT"
+authors = [
+    {name = "jaroy", email = "noreply@github.com"}
+]
+keywords = ["crestron", "swamp", "home-assistant", "audio", "multi-zone"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: End Users/Desktop",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Home Automation",
+]
 dependencies = [
     "pyyaml>=6.0.1",
     "prompt-toolkit>=3.0.43",
 ]
+
+[project.urls]
+Homepage = "https://github.com/jaroy/swamp-controller"
+Documentation = "https://github.com/jaroy/swamp-controller#readme"
+Repository = "https://github.com/jaroy/swamp-controller"
+Issues = "https://github.com/jaroy/swamp-controller/issues"
 
 [project.optional-dependencies]
 dev = [
